# vkrt

./: CMakeLists.txt  README.md  main.cpp
.github/: copilot-instructions.md
VKCapViewer/: CMakeLists.txt  VKCapViewerMain.cpp  main.cpp
VKInitTest/: CMakeLists.txt  main.cpp
VKMeshViewer/: CMakeLists.txt  OBJMesh.cpp  OBJMesh.h  VKMeshViewerMain.cpp  scene.h
VKMeshViewer/shaders/: test.frag  test.vert
cmake/: CompileGLSL.cmake
cpu-rt/: CMakeLists.txt  cpu_rt.cpp  cpu_rt.h
docs/: architecture-analysis.md
scene-core/: CMakeLists.txt  scene.h
scene-io-pbrt/: CMakeLists.txt  pbrt_loader.cpp  pbrt_loader.h
vklib/: CMakeLists.txt  app_context.cpp  app_context.h  fps_counter.cpp  fps_counter.h  imgui_function.cpp  imgui_function.h  log.h  sdl_context.cpp  sdl_context.h  vk_context.cpp  vk_context.h  vk_device_context.cpp  vk_function.cpp  vk_function.h  vklib.h  vklib_buffer_alloc.cpp  vklib_buffer_alloc.h  vklib_context.cpp  vklib_context.h  vklib_function.cpp  vklib_function.h  vma_usage.h
vkrt/: CMakeLists.txt  main.cpp  vkrt_main.cpp
